# MDDPN

./: .gitignore  LApr.py  LICENSE  MDDPN.py  README.md  TODO.md  dp.py  fastd.py  fluct.py  gdist.py  gjs.py  launcher.py  multbp.py  polling.py  pyproject.toml  setup.py  ssd.py  treat.py  unite.py
MDDPN/: __init__.py  config.py  ender.py  execution.py  init.py  parsers.py  polling.py  regexs.py  restart.py  run.py  ssd.py  testrun.py  utils.py  uw_constants.py
MDDPN/constants/: __init__.py  cf.py  conffields.py  execs.py  files.py  folders.py  params.py  sf.py  sp.py
MDDPN/control/: __init__.py  config.py  constants.py  ender.py  execution.py  init.py  parsers.py  polling.py  post_process.py  regexs.py  restart.py  run.py  ssd.py  testrun.py  utils.py
MDDPN/control/constants/: __init__.py  cf.py  execs.py  files.py  folders.py  params.py  sf.py  sp.py  union.py
MDDPN/core/: calc.py  distribution.py  props.py  utils.py
MDDPN/mpi/: fastd_mpi.py  fluct.py  matrice.py  mpiworks.py  multmpi.py  one_threaded.py  reader.py  treat_mpi.py  utils.py
MDDPN/nonmpi/: LApr.py  adios_test.py  dp.py  fastd.py  fluct.py  gdist.py  gjs.py  multbp.py  polling.py  ssd.py  treat.py
MDDPN/sbatch/: config.py  sbatch.py  utils.py
MDDPN/sbatch/constants/: execs.py  fields.py  folders.py  obj.py  ps.py  re.py
mpi/: fastd_mpi.py  mpiworks.py  multmpi.py  treat_mpi.py
src/control/: config.py  ender.py  execution.py  parsers.py
src/core/: calc.py  utils.py
src/mpi/: multmpi.py  reader.py  treat_mpi.py
src/nonmpi/: ssd.py
src/sbatch/: __init__.py  sbatch.py
(+7 files in other folders)
